Aggiustamenti per aws
-aws non supporta java 11, e usa la porta 5000