@@ -1,6 +1,7 @@
 package it.uniroma3.siw.pietropaolo.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -44,7 +45,7 @@ public class PiattoService {
 
 	public List<Piatto> findAll(){
 		return StreamSupport.stream(piattoRepository.findAll().spliterator(), true)
-			.toList();
+			.collect(Collectors.toList());
 	}
 
 	public void deletePiattoById(Long id){
